instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: not found: value baisseBrossse
baisseBrossse();
^